fix: banner learn more arrow button appears on mobile devices

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -1630,9 +1630,8 @@ opacity: 0;
     }
 
     #banner .more {
-    	display: none;
+    	display: block;
     }
-
 }
 
 body.is-loading #banner h2 {
